--- a/files/.rubocop.yml
+++ b/files/.rubocop.yml
@@ -46,3 +46,11 @@ Style/ClassAndModuleChildren:
   SafeAutoCorrect: true
   Exclude:
     - config/**/*
+
+Layout/IndentationConsistency:
+  Enabled: true
+  EnforcedStyle: normal
+
+Layout/IndentationWidth:
+  Enabled: true
+  Width: 2
