fix: enable interactive terminal for asset container by adding stdin_open flag

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ x-assets: &assets
     context: .
     dockerfile: ./Assets.dockerfile
   restart: always
+  stdin_open: true
   volumes:
     - .:/app
     - /app/node_modules
