--- a/files/.rubocop.yml
+++ b/files/.rubocop.yml
@@ -1,7 +1,6 @@
-# Omakase Ruby styling for Rails
-inherit_gem: { rubocop-rails-omakase: rubocop.yml }
-
 plugins:
+  - rubocop-rails
+  - rubocop-performance
   - rubocop-rspec
   - rubocop-thread_safety
   - rubocop-factory_bot
@@ -20,37 +19,3 @@ AllCops:
     - 'config/environments/development.rb'
     - 'config/environments/production.rb'
     - 'spec/spec_helper.rb'
-
-Layout/SpaceInsideArrayLiteralBrackets:
-  Enabled: false
-
-Layout/LineLength:
-  Max: 120
-  Exclude:
-    - db/**/*
-    - spec/**/*
-
-Style/Documentation:
-  Enabled: false
-
-Metrics/BlockLength:
-  Exclude:
-    - 'spec/**/*.rb'
-
-Metrics/MethodLength:
-  Max: 15
-
-Style/ClassAndModuleChildren:
-  Enabled: true
-  EnforcedStyle: compact
-  SafeAutoCorrect: true
-  Exclude:
-    - config/**/*
-
-Layout/IndentationConsistency:
-  Enabled: true
-  EnforcedStyle: normal
-
-Layout/IndentationWidth:
-  Enabled: true
-  Width: 2
