refactor: switch to rubocop-shopify and simplify rubocop configuration

--- a/files/.rubocop.yml
+++ b/files/.rubocop.yml
@@ -1,32 +1,2 @@
-plugins:
-  - rubocop-rails
-  - rubocop-performance
-  - rubocop-rspec
-  - rubocop-rspec_rails
-  - rubocop-thread_safety
-  - rubocop-factory_bot
-
-AllCops:
-  NewCops: enable
-  TargetRubyVersion: <%= File.read('.ruby-version').strip[/^\d+\.\d+/, 0] %>
-  Exclude:
-    - 'db/schema.rb'
-    - 'Gemfile'
-    - 'lib/tasks/*.rake'
-    - 'bin/*'
-    - 'node_modules/**/*'
-    - 'config/puma.rb'
-    - 'config/spring.rb'
-    - 'config/environments/development.rb'
-    - 'config/environments/production.rb'
-    - 'spec/spec_helper.rb'
-
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
-  Include:
-    - "app/**/*"
-    - "config/**/*"
-    - "lib/**/*"
-    - "test/**/*"
-    - "Gemfile"
+inherit_gem:
+  rubocop-shopify: rubocop.yml
