--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-ARG RUBY_VERSION
+ARG RUBY_VERSION=3.4.1
 FROM ruby:$RUBY_VERSION-slim-bookworm
 
 # Common dependencies
@@ -19,7 +19,7 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     git
 
 # Node
-ARG NODE_MAJOR
+ARG NODE_MAJOR=20
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
     --mount=type=tmpfs,target=/var/log \
