--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ x-backend: &backend
     - vite_test:/app/public/vite-test    
   environment: &backend_environment
     <<: *env
-    YARN_CACHE_FOLDER: /app/node_modules/.yarn-cache
+    PNPM_STORE_PATH: /app/node_modules/.pnpm-store
     HISTFILE: /usr/local/hist/.bash_history
     IRB_HISTFILE: /usr/local/hist/.irb_history
     EDITOR: vi
@@ -66,7 +66,7 @@ services:
     <<: *backend
     command: >
       sh -c "
-        yarn install
+        pnpm install
         ./bin/vite dev
       "
     depends_on:
@@ -75,7 +75,7 @@ services:
     environment:
       DEBUG: '*vite*'
       VITE_RUBY_HOST: 0.0.0.0
-      YARN_CACHE_FOLDER: /app/node_modules/.yarn-cache
+      PNPM_STORE_PATH: /app/node_modules/.pnpm-store
     volumes:
       - .:/app
       - bundle:/usr/local/bundle
