--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -30,7 +30,7 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends nodejs
     
-# Yarn
+# PNPM
 ARG PNPM_VERSION=latest
 RUN npm install -g pnpm@$PNPM_VERSION
 
