--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -18,13 +18,26 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     less \
     git
 
-# Create a directory for the app code
-WORKDIR /app
+# Node
+ARG NODE_MAJOR=20
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    --mount=type=tmpfs,target=/var/log \
+    apt-get update && \
+    apt-get install -y curl software-properties-common && \
+    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - && \
+    echo "deb https://deb.nodesource.com/node_${NODE_MAJOR}.x $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/nodesource.list && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends nodejs
+    
+# Yarn
+ARG YARN_VERSION=latest
+RUN npm install -g yarn@$YARN_VERSION
 
 # Configure bundler
 ENV LANG=C.UTF-8 \
-BUNDLE_JOBS=4 \
-BUNDLE_RETRY=3
+  BUNDLE_JOBS=4 \
+  BUNDLE_RETRY=3
 
 # Store Bundler settings in the project's root
 ENV BUNDLE_APP_CONFIG=.bundle
@@ -32,6 +45,9 @@ ENV BUNDLE_APP_CONFIG=.bundle
 # Upgrade RubyGems and install the latest Bundler version
 RUN gem update --system && \
     gem install bundler
+
+# Create a directory for the app code
+WORKDIR /app
 
 COPY Gemfile Gemfile.lock ./
 
