--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,7 +27,11 @@ Layout/LineLength:
     - "config/**/*"
 
 Style/ClassAndModuleChildren:
+  Enabled: true
   EnforcedStyle: compact
+  SafeAutoCorrect: true
+  Exclude:
+    - config/**/*
 
 Style/StringLiterals:
   Enabled: true
