fix: change vite service base from bun to ruby in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
       - bundle:/usr/local/bundle
 
   vite:
-    <<: *bun
+    <<: *ruby
     command: >
       sh -c "
         yarn install
