--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,43 @@
-inherit_gem:
-  rubocop-shopify: rubocop.yml
+plugins:
+  - rubocop-capybara
+  - rubocop-minitest
+  - rubocop-performance
+  - rubocop-rails
+  - rubocop-thread_safety
+
+inherit_mode:
+  merge:
+    - Exclude
 
 AllCops:
-  SuggestExtensions: false
+  NewCops: enable
+
+Style/Documentation:
+  Enabled: false
+
+Rails/I18nLocaleTexts:
+  Enabled: false
+
+Metrics/BlockLength:
+  Exclude:
+    - "config/**/*"
+
+Layout/LineLength:
+  Exclude:
+    - "config/**/*"
+
+Style/ClassAndModuleChildren:
+  Enabled: true
+  EnforcedStyle: compact
+  SafeAutoCorrect: true
+  Exclude:
+    - config/**/*
+
+Style/StringLiterals:
+  Enabled: true
+  EnforcedStyle: double_quotes
+
+Metrics/ClassLength:
+  Exclude:
+    - "test/**/*"
+    - "spec/**/*"
