style: change class/module style from compact to nested in rubocop config

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,7 +28,7 @@ Layout/LineLength:
 
 Style/ClassAndModuleChildren:
   Enabled: true
-  EnforcedStyle: compact
+  EnforcedStyle: nested
   SafeAutoCorrect: true
   Exclude:
     - config/**/*
