chore: exclude test and spec directories from BlockLength checks in Rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,8 @@ Rails/I18nLocaleTexts:
 Metrics/BlockLength:
   Exclude:
     - "config/**/*"
+    - "test/**/*"
+    - "spec/**/*"
 
 Layout/LineLength:
   Exclude:
