chore: switch from minitest to rspec rubocop plugin and update docs for esbuild

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,6 @@
 plugins:
   - rubocop-capybara
-  - rubocop-minitest
+  - rubocop-rspec
   - rubocop-performance
   - rubocop-rails
   - rubocop-thread_safety
